--- a/index.html
+++ b/index.html
@@ -206,26 +206,49 @@
                             <tr>
                                 <td align="center" style="padding:0 0 0 0;">
                                     <table role="presentation" class="container" width="100%" border="0" cellspacing="0"
-                                        cellpadding="0">
-                                        <tr>
-                                            <td style="padding:0;">
-                                                <img src="https://i.ibb.co/wYSTnpM/parrafo-2.jpg" alt="parrafo-2"
-                                                    width="800" style="display:block;">
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                            <!-- parrafo 2 -->
-                            <!-- ipae -->
-                            <tr>
+                                    cellpadding="0">
+                                    <tr>
+                                        <td style="padding:0;">
+                                            <img src="https://i.ibb.co/wYSTnpM/parrafo-2.jpg" alt="parrafo-2"
+                                            width="800" style="display:block;">
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- parrafo 2 -->
+                        <!-- ipae logo -->
+                        <tr>
+                            <td align="center" style="padding:0 0 0 0;">
+                                <table role="presentation" class="container" width="100%" border="0" cellspacing="0"
+                                    cellpadding="0">
+                                    <tr>
+                                        <td width="49.8039px">
+                                            &nbsp;
+                                        </td>
+                                        <td style="padding:0;">
+                                            <a href="https://www.ipae.pe/" target="_blank">
+                                                <img src="https://i.ibb.co/5kw6kz4/ipae-pe.jpg"
+                                                    alt="click" width="141.111" style="display:block;">
+                                            </a>
+                                        </td>
+                                        <td style="padding:0;">
+                                            <img src="https://i.ibb.co/5RdhpyZ/ipae-logo.jpg" alt="logo" width="609.6841" style="display:block;">
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <!-- ipae logo -->
+                        <!-- ipae -->
+                        <tr>
                                 <td align="center" valign="top" style="padding:0;">
                                     <table role="presentation" class="container" width="100%" border="0" cellspacing="0"
                                         cellpadding="0">
                                         <tr>
                                             <td align="center" style="padding:0;">
-                                                <img src="https://i.ibb.co/rwR6C2b/ipae.jpg"
-                                                    alt="auspiciadores" width="800" height="auto"
+                                                <img src="https://i.ibb.co/GCf3PRx/linea.jpg"
+                                                    alt="ipae-linea" width="800" height="auto"
                                                     style="display:block;">
                                             </td>
                                         </tr>
